--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -77,7 +77,7 @@ body {
 .brand-wrap {
     text-align: center;
     color: #ffffff;
-    /* padding-top: 10rem; */
+    margin-top: -8rem;
 }
 
 .brand-wrap img {
@@ -113,6 +113,13 @@ body {
 .displaying {
     display: none;
     padding-top: 1rem;
+    user-select: none;
+}
+
+.counter {
+    position: absolute;
+    right: 1rem;
+    top: -2.5rem;
 }
 
 .message {
@@ -133,7 +140,7 @@ body {
 #error {
     font-size: 1.2rem;
     position: absolute;
-    top: -1.7rem;
+    top: -2rem;
     left: 0.5rem;
     color: #ff4081;
 }
@@ -257,4 +264,42 @@ body {
     font-family: 'Archer Bold';
     font-size: 2.8rem;
     cursor: pointer;
+}
+
+.flash-message {
+    position: absolute;
+    top: 2rem;
+    right: 4rem;
+    padding: 1rem 5rem;
+    /* color: #ffffff; */
+    background-color: #c5e1a5;
+    border-radius: 30px;
+    border: 5px solid #00fe0a;
+    font-size: 1.4rem;
+    display: none;
+    font-family: 'Archer Bold';
+    animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both infinite;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+}
+
+@keyframes shake {
+    10%,
+    90% {
+        transform: translate3d(-1px, 0, 0);
+    }
+    20%,
+    80% {
+        transform: translate3d(2px, 0, 0);
+    }
+    30%,
+    50%,
+    70% {
+        transform: translate3d(-4px, 0, 0);
+    }
+    40%,
+    60% {
+        transform: translate3d(4px, 0, 0);
+    }
 }
