--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -271,11 +271,9 @@ body {
     position: fixed;
     top: 2rem;
     right: 12rem;
-    padding: 1rem 5rem;
-    /* color: #ffffff; */
-    background-color: #c5e1a5;
-    border-radius: 30px;
-    border: 5px solid #00fe0a;
+    padding: 2rem 5rem;
+    background-color: #ffffff;
+    border-top: 5px solid #00fe0a;
     font-size: 1.4rem;
     display: none;
     font-family: 'Archer Bold';
